Fix iOS avatar clipping in guest cards

--- a/style.css
+++ b/style.css
@@ -384,30 +384,14 @@ input {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: center 32%;
-  display: block;
-}
-
-/*.guest-avatar {
-  width: 68px;
-  height: 68px;
-  border-radius: 50%;
-  overflow: hidden;
-  position: relative;
-  display: block;
-  background: transparent;
-}
-
-.guest-avatar__image {
-  width: 100%;
-  height: 100%;
-  display: block;
-  object-fit: cover;
   object-position: center;
-  border-radius: 50%; */
-
-  /* clave */
+  display: block;
   transform: scale(1.01);
+  transform-origin: center;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: scale(1.01) translateZ(0);
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
 }
 
 .guest-name {
